# ai-documentation-testing

./: .coderabbit.yaml  .env.example  .gitignore  CLAUDE.md  README.md  greptile.json  pyproject.toml
agent-evals/: pyproject.toml
agent-evals/examples/: full-config.yaml  minimal-config.yaml
agent-evals/gold_standard/: annotation_protocol.md  schema.yaml
agent-evals/gold_standard/agentic/: agentic_001.yaml  agentic_002.yaml  agentic_003.yaml  agentic_004.yaml  agentic_005.yaml  agentic_006.yaml  agentic_007.yaml  agentic_008.yaml  agentic_009.yaml  agentic_010.yaml  agentic_011.yaml  agentic_012.yaml  agentic_013.yaml  agentic_014.yaml  agentic_015.yaml  agentic_016.yaml  agentic_017.yaml  agentic_018.yaml  agentic_019.yaml  agentic_020.yaml  agentic_021.yaml  agentic_022.yaml  agentic_023.yaml  agentic_024.yaml  agentic_025.yaml  agentic_026.yaml  agentic_027.yaml  agentic_028.yaml  agentic_029.yaml  agentic_030.yaml
agent-evals/gold_standard/canaries/: canary_001.yaml  canary_002.yaml  canary_003.yaml  canary_004.yaml  canary_005.yaml  canary_006.yaml  canary_007.yaml  canary_008.yaml  canary_009.yaml  canary_010.yaml
agent-evals/gold_standard/code_generation/: code_generation_001.yaml  code_generation_002.yaml  code_generation_003.yaml  code_generation_004.yaml  code_generation_005.yaml  code_generation_006.yaml  code_generation_007.yaml  code_generation_008.yaml  code_generation_009.yaml  code_generation_010.yaml  code_generation_011.yaml  code_generation_012.yaml  code_generation_013.yaml  code_generation_014.yaml  code_generation_015.yaml  code_generation_016.yaml  code_generation_017.yaml  code_generation_018.yaml  (+12 more)
agent-evals/tests/: conftest.py  test_agent_evals_init.py  test_axis_1_2_variants.py  test_axis_3_4_variants.py  test_axis_5_6_variants.py  test_axis_7_8_variants.py  test_axis_9_10_variants.py  test_baselines.py  test_beam_search.py  test_cache.py  test_client_pool.py  test_composite_variant.py  test_cost.py  test_dashboard_launch.py  test_dataset_ambigqa.py  test_dataset_base.py  test_dataset_bigcodebench.py  test_dataset_cache.py  test_dataset_code_rag.py  test_dataset_ds1000.py  test_dataset_efficiency.py  test_dataset_multihop_rag.py  test_dataset_perturbation.py  test_dataset_repliqa.py  test_dataset_swe_bench.py  test_dataset_techqa.py  test_dataset_wikicontradict.py  test_evals_cli.py  test_factorial.py  test_fixtures.py  test_format_pipe_delimited.py  test_format_yaml.py  test_framing_test.py  test_gold_standard_schema.py  test_hf_utils.py  test_integration.py  test_interaction_analysis.py  test_judge_calibration.py  test_llm_client.py  test_logging_config.py  (+56 more)
agent-index/: .pre-commit-hooks.yaml  pyproject.toml
agent-index/tests/: test_agent_index_init.py  test_autodetect.py  test_cli.py  test_cli_extended.py  test_config.py  test_models.py  test_output.py  test_output_formats.py  test_scaffold.py  test_scanner.py  test_scanner_github.py  test_tiers.py  test_transform.py  test_validate.py  test_wizard.py
(+627 files in other folders)
