[project]
name = "ai-enhancements"
version = "0.1.0"
description = "AI coding agent documentation optimizer and evaluation framework"
requires-python = ">=3.11"
dependencies = [
    "agent-index",
    "agent-evals",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[tool.uv.workspace]
members = ["agent-index", "agent-evals"]

[tool.uv.sources]
agent-index = { workspace = true }
agent-evals = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PIE"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["agent-index/tests", "agent-evals/tests"]
addopts = "-v --tb=short"
